# lab04

./: README.md  test.sh
.github/workflows/: action.yml  test.sh  travis.yml
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp
formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
hello_world_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  hello_world
solver_application/: CMakeLists.txt  equation.cpp
solver_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  main
solver_lib/: solver.cpp
workflows/: test.sh  travis.yml
